Time: 21 ms (26.11%) | Memory: 97.8 MB (83.44%) - LeetSync